CMF 2.1.0-beta (unreleased)

  New Features

    - DirectoryView: Added support for non-product packages.
      This introduces new registry keys. Old registry keys stored in
      persistent DirectoryView objects are updated on the fly.
      (http://www.zope.org/Collectors/CMF/467)

    - Document: Added two new methods for safety belt handling.

    - setup handlers: Improved properties handler.
      It now works with properties using a default_charset other than UTF-8.

    - Merged patches from Martin Aspeli to enable generating events before
      and after DCWorkflow transitions, and in the 'notify' methods of the
      workflow tool (http://www.zope.org/Collectors/CMF/461).

  Bug Fixes

    - CMFCore.MembershipTool: Fixed inconsistent behavior where member lookup
      would take all user folders up to the Zope root into account whereas
      member area creation would not.

    - CMFCore.MembershipTool/CMFDefault.MembershipTool: when using an
      object without a __nonzero__ but with a __len__ (ala
      CMFBTreeFolder) as a member folder, the createMemberArea method
      would believe there was no members folder if the folder was
      empty, and so would fail (change "not membersfolder" to
      "membersfolder is not None") .

    - CMFDefault.File and CMFDefault.Image: Restored ZMI Cache tab which was
      lost in CMF 1.6.

    - CMFCore.DynamicType: Fixed behaviour regarding default view.
      DynamicType was making it impossible to use a Zope3-style
      default view for CMF content types.
      (http://www.zope.org/Collectors/CMF/459)

  Others

    - CMFCore utils: Marked 'minimalpath' and 'expandpath' as deprecated.

    - The CMF now depends on Zope 2.10.2 or higher.


CMF 2.1.0-alpha2 (2006/11/23)

  New Features

    - WorkflowTool: Added the IConfigurableWorkflowTool interface.
      This change includes the new 'getDefaultChain' and 'listChainOverrides'
      methods and an improved 'setChainForPortalTypes' method. The import