@@ -1,14 +1,14 @@
 ##############################################################################
 #
 # Copyright (c) 2003 Zope Corporation and Contributors. All Rights Reserved.
-# 
+#
 # This software is subject to the provisions of the Zope Public License,
 # Version 2.1 (ZPL).  A copy of the ZPL should accompany this distribution.
 # THIS SOFTWARE IS PROVIDED "AS IS" AND ANY AND ALL EXPRESS OR IMPLIED
 # WARRANTIES ARE DISCLAIMED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
 # WARRANTIES OF TITLE, MERCHANTABILITY, AGAINST INFRINGEMENT, AND FITNESS
 # FOR A PARTICULAR PURPOSE.
-# 
+#
 ##############################################################################
 """ Product: CMFActionIcons
 
@@ -17,13 +17,9 @@ Define tool for mapping CMF actions onto icons.
 $Id$
 """
 
-from Products.CMFCore.DirectoryView import registerDirectory
 from Products.CMFCore.utils import ToolInit
 
 import ActionIconsTool
-
-
-registerDirectory('skins', globals())
 
 def initialize(context):
 
