@@ -1,7 +1,12 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
+    xmlns:cmf="http://namespaces.zope.org/cmf"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     i18n_domain="cmf_default">
+
+  <!-- directories -->
+
+  <cmf:registerDirectory name="actionicons"/>
 
   <!-- profiles -->
 
