@@ -1,5 +1,6 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
+    xmlns:cmf="http://namespaces.zope.org/cmf"
     xmlns:five="http://namespaces.zope.org/five"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     i18n_domain="cmf_calendar">
@@ -21,6 +22,10 @@
       component=".Event.EventFactory"
       name="cmf.calendar.event"
       />
+
+  <!-- directories -->
+
+  <cmf:registerDirectory name="zpt_calendar"/>
 
   <!-- profiles -->
 
