@@ -1,0 +1,13 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:cmf="http://namespaces.zope.org/cmf">
+
+  <cmf:registerDirectory name="Images"/>
+
+  <cmf:registerDirectory name="zpt_content"/>
+
+  <cmf:registerDirectory name="zpt_control"/>
+
+  <cmf:registerDirectory name="zpt_generic"/>
+
+</configure>
